feat: 로또 결과 출력하기